--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -248,9 +248,48 @@
 
   .client-data {
     margin-top: 30px;
-  }
 
-  .client-data > h2 {
-    font-size: 36px;
+    & h2 {
+      font-size: 36px;
+    }
+
+    & h3 {
+      font-size: 24px;
+      color: #fff;
+    }
+
+    .contact-information {
+      margin-top: 60px;
+      width: 100%;
+      height: 400px;
+      border-radius: 20px;
+      background-color: #504B4A;
+      padding: 20px 30px;
+
+      & label {
+        color: #fff;
+        position: absolute;
+        left: 12px;
+        top: 50%;
+        transform: translateY(-50%);
+      }
+
+      .contact-fields {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+      }
+
+      .contact-field-area {
+        position: relative;
+      }
+
+      .contact-field {
+        border: 1px solid #fff;
+        border-radius: 10px;
+        padding: 10px 15px;
+        position: relative;
+      }
+    }
   }
 }
