--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,13 @@ button {
   color: #000;
 }
 
+input,
+textarea {
+  background-color: transparent;
+  border: none;
+  color: #fff;
+}
+
 ::-webkit-scrollbar-track {
   background-color: #f18700;
 }
