--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -258,37 +258,96 @@
       color: #fff;
     }
 
-    .contact-information {
-      margin-top: 60px;
+    .order-data {
+      margin-top: 30px;
+    }
+
+    .contact-information,
+    .delivery-information {
       width: 100%;
-      height: 400px;
       border-radius: 20px;
       background-color: #504B4A;
-      padding: 20px 30px;
+      padding: 20px 30px 30px;
+    }
 
-      & label {
-        color: #fff;
-        position: absolute;
-        left: 12px;
-        top: 50%;
-        transform: translateY(-50%);
+    .delivery-information {
+      margin-top: 30px;
+
+      & .delivery-checkboxes, {
+        width: 100%;
+        margin-top: 20px;
+
+        & .checkboxes-wrapper {
+          border: 1px solid #f18700;
+          display: flex;
+          width: 100%;
+          max-width: 362px;
+          border-radius: 12px;
+          overflow: hidden;
+          position: relative;
+
+          & .radio-area {
+            width: 50%;
+          }
+
+          & .radio-area:first-child {
+            border-right: 1px solid #f18700;
+          }
+
+          & label {
+            @include flexPos(center, center);
+            height: 60px;
+            color: #fff;
+            font-size: 18px;
+            cursor: pointer;
+            position: relative;
+          }
+
+          input[type="radio"]:checked + label {
+            font-weight: 900;
+          }
+
+          .pseudo-element {
+            position: absolute;
+            width: 181px;
+            height: 100%;
+            background-color: #f18700;
+            pointer-events: none;
+            top: 0;
+            transition: left .3s;
+          }
+
+          &.delivery > .pseudo-element {
+            left: 0;
+          }
+
+          &.self-delivery > .pseudo-element {
+            left: 50%;
+          }
+        }
       }
+    }
 
+    .contact-information {
       .contact-fields {
         width: 100%;
         display: flex;
         justify-content: space-between;
+        flex-wrap: wrap;
+      }
+    }
+
+    .delivery-address {
+      margin-top: 30px;
+
+      h3 {
+        font-size: 20px;
       }
 
-      .contact-field-area {
-        position: relative;
-      }
-
-      .contact-field {
-        border: 1px solid #fff;
-        border-radius: 10px;
-        padding: 10px 15px;
-        position: relative;
+      .address-fields {
+        display: grid;
+        grid: repeat(3, 1fr) / repeat(3, 1fr);
+        gap: 10px;
       }
     }
   }
