--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -345,9 +345,25 @@
       }
 
       .address-fields {
+        margin-top: 20px;
         display: grid;
-        grid: repeat(3, 1fr) / repeat(3, 1fr);
-        gap: 10px;
+        grid: repeat(2, 62px) 1fr / repeat(3, 1fr);
+        gap: 15px;
+      }
+
+      .address-fields > .field-area:first-child,
+      .address-fields > .field-area:last-child {
+        width: 100%;
+        grid-column: 1 / 4;
+      }
+
+      .address-fields > .field-area:nth-child(2) {
+        width: 100%;
+        grid-column: 1 / 3;
+      }
+
+      .address-fields .modal-field {
+        width: 100%;
       }
     }
   }
