--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -139,6 +139,10 @@
         & h3 {
           text-transform: uppercase;
           font-size: 24px;
+          display: -webkit-box;
+          -webkit-line-clamp: 2;
+          -webkit-box-orient: vertical;
+          overflow: hidden;
         }
 
         & p {
