--- a/src/components/Main/styles/Main_adaptive.scss
+++ b/src/components/Main/styles/Main_adaptive.scss
@@ -1,3 +1,9 @@
+@media screen and (max-width: 1025px) {
+  .main-content {
+    margin-top: 106px;
+  }
+}
+
 @media screen and (max-width: 769px) {
   .main-content {
     margin-top: 81px;
