--- a/src/components/Modal/styles/Modal.scss
+++ b/src/components/Modal/styles/Modal.scss
@@ -314,7 +314,7 @@
 
           .pseudo-element {
             position: absolute;
-            width: 181px;
+            width: 50%;
             height: 100%;
             background-color: #f18700;
             pointer-events: none;
