--- a/src/components/ModalField/styles/ModalField_adaptive.css
+++ b/src/components/ModalField/styles/ModalField_adaptive.css
@@ -3,3 +3,9 @@
         padding: 0 9px;
     }
 }
+
+@media screen and (max-width: 376px) {
+    .field-area label {
+        font-size: 13px;
+    }
+}
