--- a/src/components/Header/styles/Header_adaptive.scss
+++ b/src/components/Header/styles/Header_adaptive.scss
@@ -19,8 +19,7 @@
 
 @media screen and (max-width: 769px) {
   .page-header {
-    padding-right: 10px;
-    padding-left: 10px;
+    padding: 0 10px;
 
     &__logo {
       width: 50px;
