--- a/src/components/ModalField/styles/ModalField_adaptive.css
+++ b/src/components/ModalField/styles/ModalField_adaptive.css
@@ -1,5 +1,6 @@
 @media screen and (max-width: 426px) {
     .field-area label {
-        padding: 0 9px;
+        padding: 0 8px;
+        left: 8px;
     }
 }
